# KLMC3_python_interface

./: .CallClassMethod2.c.swp  CallClassMethod.c  CallClassMethod.x  CallClassMethod2.c  GetIntegerDouble.c  GetIntegerDouble.x  GetReturnString.c  GetReturnString.x  PassTwoIntRetSum.c  PassTwoIntRetSum.c.old  PassTwoIntRetSum.x  README.md  SimpleCall.c  SimpleCall.x  clean.sh  compile.sh  compile_scorep.sh  file_name.txt  mpi_test.c  mpi_test.py  my_python_module.py  slurm-7722133.out  slurm-7722141.out  slurm-7722170.out  slurm-7722208.out  slurm-7722217.out  slurm-7722218.out  slurm-7722220.out  slurm-7722221.out  slurm_mpi_test.slurm  slurm_mpi_test_node.slurm  test_module.py
Application1_data_handling/: .pass_data_c2py_str_double_arr.c.swp  compile.sh  pass_data_c2py_double_arr_change.c  pass_data_c2py_str_double_arr.c  print_lists.py  print_python_list_object.c
ExceptionalCasePyObject/: source.c
HPCtest/: SLURM_js.slurm  file_name.txt  stdout
cmake_compile/: CMakeLists.txt  call_py.c  manual.sh
cmake_compile_condition/: call_py.c
cmake_compile_condition_fullseparation/: CMakeLists.txt  call_py.c  errorfree.call_pt.c
cmake_compile_condition_fullseparation2/: CMakeLists.txt  call_py.c
cmake_compile_condition_fullseparation2/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  m.x
cmake_compile_condition_fullseparation2/_build/sampling/1/: geometry.in
deprecated/: PassTwoIntRetSum.c.old2
